Add more refs for scientists don't respond to data sharing requests claim.

--- a/include/bib/open-sci.bib
+++ b/include/bib/open-sci.bib
@@ -1,3 +1,103 @@
+
+
+@ARTICLE{Wicherts2006-de,
+  title    = "The poor availability of psychological research data for
+              reanalysis",
+  author   = "Wicherts, Jelte M and Borsboom, Denny and Kats, Judith and
+              Molenaar, Dylan",
+  journal  = "The American psychologist",
+  volume   =  61,
+  number   =  7,
+  pages    = "726--728",
+  month    =  oct,
+  year     =  2006,
+  url      = "http://dx.doi.org/10.1037/0003-066X.61.7.726",
+  language = "en",
+  issn     = "0003-066X",
+  pmid     = "17032082",
+  doi      = "10.1037/0003-066X.61.7.726"
+}
+
+@ARTICLE{Vanpaemel2015-zr,
+  title    = "Are we wasting a good crisis? The availability of psychological
+              research data after the storm",
+  author   = "Vanpaemel, Wolf and Vermorgen, Maarten and Deriemaecker, Leen and
+              Storms, Gert",
+  journal  = "Collabra",
+  volume   =  1,
+  number   =  1,
+  month    =  oct,
+  year     =  2015,
+  url      = "http://www.collabra.org/articles/10.1525/collabra.13/",
+  keywords = "Data-sharing; Open Science; Questionable research practices;
+              replicability crisis; research integrity",
+  language = "eng",
+  issn     = "2376-6832",
+  doi      = "10.1525/collabra.13"
+}
+
+
+@ARTICLE{Tedersoo2021-ad,
+  title    = "Data sharing practices and data availability upon request differ
+              across scientific disciplines",
+  author   = "Tedersoo, Leho and K{\"u}ngas, Rainer and Oras, Ester and
+              K{\"o}ster, Kajar and Eenmaa, Helen and Leijen, {\"A}li and
+              Pedaste, Margus and Raju, Marju and Astapova, Anastasiya and
+              Lukner, Heli and Kogermann, Karin and Sepp, Tuul",
+  journal  = "Scientific data",
+  volume   =  8,
+  number   =  1,
+  pages    = "192",
+  month    =  jul,
+  year     =  2021,
+  url      = "http://dx.doi.org/10.1038/s41597-021-00981-0",
+  language = "en",
+  issn     = "2052-4463",
+  pmid     = "34315906",
+  doi      = "10.1038/s41597-021-00981-0",
+  pmc      = "PMC8381906"
+}
+
+@ARTICLE{Miyakawa2020-wu,
+  title    = "No raw data, no science: another possible source of the
+              reproducibility crisis",
+  author   = "Miyakawa, Tsuyoshi",
+  journal  = "Molecular brain",
+  volume   =  13,
+  number   =  1,
+  pages    = "24",
+  month    =  feb,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1186/s13041-020-0552-2",
+  keywords = "Data fabrication; Misconduct; Open data; Open science; Raw data;
+              Reproducibility",
+  language = "en",
+  issn     = "1756-6606",
+  pmid     = "32079532",
+  doi      = "10.1186/s13041-020-0552-2",
+  pmc      = "PMC7033918"
+}
+
+@ARTICLE{Gabelica2022-nt,
+  title    = "Many researchers were not compliant with their published data
+              sharing statement: a mixed-methods study",
+  author   = "Gabelica, Mirko and Boj{\v c}i{\'c}, Ru{\v z}ica and Puljak,
+              Livia",
+  journal  = "Journal of clinical epidemiology",
+  volume   =  150,
+  pages    = "33--41",
+  month    =  oct,
+  year     =  2022,
+  url      = "http://dx.doi.org/10.1016/j.jclinepi.2022.05.019",
+  keywords = "Data availability statement; Data sharing; Metaresearch;
+              Noncompliance; Open data; Reproducibility",
+  language = "en",
+  issn     = "0895-4356, 1878-5921",
+  pmid     = "35654271",
+  doi      = "10.1016/j.jclinepi.2022.05.019"
+}
+
+
 @MISC{Watson2022-ox,
   title        = "Many researchers say they'll share data --- but don't",
   booktitle    = "Nature Publishing Group {UK}",
