Add Kohler slide; minor reformatting of other slides.

--- a/include/bib/open-sci.bib
+++ b/include/bib/open-sci.bib
@@ -1,4 +1,37 @@
 
+@Manual{rstudio_cite,
+    title = {RStudio: Integrated Development Environment for R},
+    author = {{Posit team}},
+    organization = {Posit Software, PBC},
+    address = {Boston, MA},
+    year = {2023},
+    url = {http://www.posit.co/},
+  }
+  
+@MISC{Gilmore_undated-tc,
+  title       = "symmetry-sorting: Behavioral studies associated with symmetry
+                 project",
+  author      = "Gilmore, Rick O and Kohler, Peter J",
+  institution = "Github",
+  url         = "https://github.com/gilmore-lab/symmetry-sorting",
+  language    = "en"
+}
+
+@ARTICLE{Kohler2022-ld,
+  title     = "Perceptual Similarities among Wallpaper Group Exemplars",
+  author    = "Kohler, Peter J and Vedak, Shivam and Gilmore, Rick O",
+  journal   = "Symmetry",
+  publisher = "Multidisciplinary Digital Publishing Institute",
+  volume    =  14,
+  number    =  5,
+  pages     = "857",
+  month     =  apr,
+  year      =  2022,
+  url       = "https://www.mdpi.com/2073-8994/14/5/857?type=check_update&version=1",
+  language  = "en",
+  issn      = "2073-8994, 2073-8994",
+  doi       = "10.3390/sym14050857"
+}
 
 @ARTICLE{Wicherts2006-de,
   title    = "The poor availability of psychological research data for
