Multiple edits, simplifications.

--- a/include/bib/open-sci.bib
+++ b/include/bib/open-sci.bib
@@ -1,4 +1,20 @@
 
+@ARTICLE{Frank2012-fc,
+  title    = "Teaching Replication",
+  author   = "Frank, Michael C and Saxe, Rebecca",
+  journal  = "Perspectives on psychological science: a journal of the
+              Association for Psychological Science",
+  volume   =  7,
+  number   =  6,
+  pages    = "600--604",
+  month    =  nov,
+  year     =  2012,
+  url      = "http://dx.doi.org/10.1177/1745691612460686",
+  language = "en",
+  issn     = "1745-6916",
+  doi      = "10.1177/1745691612460686"
+}
+
 @Manual{rstudio_cite,
     title = {RStudio: Integrated Development Environment for R},
     author = {{Posit team}},
